implemented addtion of APM to MA LMM. modified the data/msvd annotations to only have two videos, one where the orignal model was correct and one where the original model messed up.

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,10 +53,13 @@
     "    frames = vr.get_batch(select_frame_index).permute(3, 0, 1, 2).to(torch.float32)\n",
     "    return frames\n",
     "\n",
+    "# frame path  \"/home/rmodi/to_share/david/MA-LMM/data/msvd/frames/jsEUFYhiqxU_121_128/\"\n",
     "file_path = \"example/video.mp4\"\n",
     "vr = VideoReader(file_path, ctx=cpu(0))\n",
-    "total_frames = len(vr)\n",
-    "fps = vr.get_avg_fps()\n",
+    "# total_frames = len(vr)\n",
+    "total_frames=72\n",
+    "#fps = vr.get_avg_fps()\n",
+    "fps=10\n",
     "duration = total_frames / fps\n",
     "\n",
     "print(\"video_duration: {:.1f}, fps: {:.1f}\".format(duration, fps))"
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +114,15 @@
     }
    ],
    "source": [
-    "from IPython.display import HTML\n",
+    "\n",
+    "#from IPython.display import HTML\n",
     "\n",
     "# Embed video using HTML\n",
-    "HTML(\"\"\"\n",
-    "<video width=\"640\" height=\"480\" controls>\n",
-    "  <source src=\"example/video.mp4\" type=\"video/mp4\">\n",
-    "</video>\n",
-    "\"\"\")"
+    "#HTML(\"\"\"\n",
+    "#<video width=\"640\" height=\"480\" controls>\n",
+    "#  <source src=\"example/video.mp4\" type=\"video/mp4\">\n",
+    "#</video>\n",
+    "#\"\"\")\n"
    ]
   },
   {
@@ -130,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -151,9 +155,9 @@
    "source": [
     "# We associate a model with its preprocessors to make it easier for inference.\n",
     "# You can specify the memory_bank_length and num_frames here.\n",
-    "model, vis_processors, _ = load_model_and_preprocess(\n",
-    "    name=\"blip2_vicuna_instruct_malmm\", model_type=\"vicuna7b\", is_eval=True, device=device, memory_bank_length=10, num_frames=20,\n",
-    ")\n",
+    "#model, vis_processors, _ = load_model_and_preprocess(\n",
+    "#   name=\"blip2_vicuna_instruct_malmm\", model_type=\"vicuna7b\", is_eval=True, device=device, memory_bank_length=10, num_frames=20,\n",
+    "#)\n",
     "# model, vis_processors, _ = load_model_and_preprocess(\n",
     "#     name=\"blip2_vicuna_instruct_malmm\", model_type=\"vicuna13b\", is_eval=True, device=device, memory_bank_length=10, num_frames=20,\n",
     "# )"
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +180,12 @@
     "# If you want to load a finetuned checkpoints, such as the finetuned model weight of ActivityNet-QA dataset,\n",
     "# you need to first set the load_finetuned=True and specify the finetuned checkpoint path and reload the model again.\n",
     "\n",
-    "# load_finetuned: True\n",
-    "# finetuned: \"saved_model/ActivityNet_qa/checkpoint_best.pth\"\n",
+    "load_finetuned: True\n",
+    "finetuned: \"/home/davidg3/MA-LMM/saved_model/MSVD_qa/checkpoint_best.pth\"\n",
     "\n",
-    "# model, vis_processors, _ = load_model_and_preprocess(\n",
-    "#     name=\"blip2_vicuna_instruct_malmm\", model_type=\"vicuna7b\", is_eval=True, device=device, memory_bank_length=10, num_frames=20,\n",
-    "# )"
+    "model, vis_processors, _ = load_model_and_preprocess(\n",
+    "    name=\"blip2_vicuna_instruct_malmm\", model_type=\"vicuna7b\", is_eval=True, device=device, memory_bank_length=20, num_frames=total_frames,\n",
+    ")"
    ]
   },
   {
@@ -210,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
